--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - img/
+    - Assets/krowl_logo.png
+    - Assets/press_enter.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
