--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sizer: ^2.0.15
   http:
   shared_preferences: ^0.5.6+1
   dots_indicator: ^2.0.0
@@ -52,6 +53,7 @@ flutter:
   assets:
     - Assets/krowl_logo.png
     - Assets/press_enter.png
+    - Assets/Register.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
