--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
-  http:
   shared_preferences: ^2.0.0-nullsafety
   dots_indicator: ^2.0.0
   flappy_search_bar: 1.4.1
   email_validator: '^1.0.6'
   form_field_validator: ^1.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
