--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flappy_search_bar: 1.4.1
   email_validator: '^1.0.6'
   form_field_validator: ^1.1.0
+  keyboard_actions: ^3.4.4
   http: ^0.13.4
 
 dev_dependencies:
