--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   form_field_validator: ^1.1.0
   keyboard_actions: ^3.4.4
   http: ^0.13.4
-  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker: ^1.5.0
+  flutter_typeahead: ^3.2.1
 
 dev_dependencies:
   flutter_test:
