--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.0
   flutter_typeahead: ^3.2.1
   faker: ^2.0.0
+  hovering: ^1.0.4
 
 dev_dependencies:
   flutter_test:
