--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,15 @@ dependencies:
   sizer: ^2.0.15
   shared_preferences: ^2.0.0-nullsafety
   dots_indicator: ^2.0.0
-  flappy_search_bar: 1.4.1
+  material_floating_search_bar: ^0.3.6
   email_validator: '^1.0.6'
   form_field_validator: ^1.1.0
   keyboard_actions: ^3.4.4
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.0
   flutter_typeahead: ^3.2.1
-  faker: ^2.0.0
   hovering: ^1.0.4
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
