--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_typeahead: ^3.2.1
   hovering: ^1.0.4
   flutter_staggered_grid_view: ^0.4.1
+  desktop_window: ^0.4.0
 
 dev_dependencies:
   flutter_test:
