--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hovering: ^1.0.4
   flutter_staggered_grid_view: ^0.4.1
   desktop_window: ^0.4.0
+  flutter_chat_ui: ^1.5.1
 
 dev_dependencies:
   flutter_test:
