--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_typeahead: ^3.2.1
   flutter_staggered_grid_view: ^0.4.1
   desktop_window: ^0.4.0
-
+  flutter_ion: ^0.5.4
 
 
 dev_dependencies:
