--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   desktop_window: ^0.4.0
   flutter_ion: ^1.0.0
+  google_fonts: ^2.1.0
+  like_button: ^2.0.3
+  flutter_animated_button: ^2.0.0
+  animated_button: ^0.2.0
+  bouncing_widget: ^2.0.0
 
 
 dev_dependencies:
