--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - Assets/userImage8.jpeg
     - Assets/clara3.png
     - Assets/clara4.PNG
+    - Assets/testNet.PNG
 
   #   - images/a_dot_ham.jpeg
 
