--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_switch: ^0.3.2
   toggle_switch: ^1.3.0
   flutter_device_type: ^0.4.0
+  flutter_easyloading: ^3.0.3
 
 
 dev_dependencies:
