--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   toggle_switch: ^1.3.0
   flutter_device_type: ^0.4.0
   flutter_easyloading: ^3.0.3
+  stream_chat: ^3.3.1
 
 
 dev_dependencies:
