--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/krowl_logo.png
+    - Assets/krowl_logo.gif
     - Assets/press_enter.png
     - Assets/Register.png
     - Assets/userImage1.jpeg
