--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   quill_delta: ^3.0.0-nullsafety.2
   flutter_keyboard_visibility: ^5.1.0
   provider: ^6.0.2
+  number_paginator: ^0.0.2
 
 
 
