--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.1.0
   provider: ^6.0.2
   number_paginator: ^0.0.2
-
+  stream_chat_flutter_core: ^3.3.1
 
 
 
