--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
     - Assets/clara4.PNG
     - Assets/testNet.PNG
     - Assets/CoverPhoto.jpg
+    - Assets/crown.PNG
 
   #   - images/a_dot_ham.jpeg
 
