--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_app_backend
+name: Krowl
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -62,12 +62,18 @@ dependencies:
   avatars: ^3.0.2
   motion_toast: ^2.1.1
   simple_tooltip: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Assets/krowl_logo2.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
