--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,10 +92,10 @@ BEGIN
             VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "A new Flutter project." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutterkrowl" "\0"
+            VALUE "InternalName", "Krowl" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2021 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutterkrowl.exe" "\0"
-            VALUE "ProductName", "flutterkrowl" "\0"
+            VALUE "OriginalFilename", "Krowl.exe" "\0"
+            VALUE "ProductName", "Krowl" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
