--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,6 @@ dependencies:
   avatars: ^3.0.2
   motion_toast: ^2.1.1
   simple_tooltip: ^1.0.0
-  flutter_launcher_icons: ^0.9.2
 
 
 
@@ -70,8 +69,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.9.2
+
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "Assets/krowl_logo2.png"
 
