--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "flutter_many2many",
-  "short_name": "flutter_many2many",
+  "name": "Krowl",
+  "short_name": "Krowl",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
