--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,8 @@ dependencies:
   avatars: ^3.0.2
   motion_toast: ^2.1.1
   simple_tooltip: ^1.0.0
-  url_strategy: ^0.2.0
   desktop_webview_window: ^0.1.6
+  flutter_session_manager: ^1.0.3
 
 
 
