--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.17.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,43 +27,44 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  #cupertino_icons: ^1.0.2
   sizer: ^2.0.15
   shared_preferences: ^2.0.0-nullsafety
-  dots_indicator: ^2.0.0
-  material_floating_search_bar: ^0.3.6
-  form_field_validator: ^1.1.0
+  #dots_indicator: ^2.0.0
+  #material_floating_search_bar: ^0.3.6
+  #form_field_validator: ^1.1.0
   keyboard_actions: ^3.4.4
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.0
-  flutter_typeahead: ^3.2.1
-  flutter_staggered_grid_view: ^0.4.1
-  desktop_window: ^0.4.0
-  flutter_ion: ^1.0.0
+  flutter_typeahead: ^4.0.0
+  #flutter_staggered_grid_view: ^0.4.1
+  #desktop_window: ^0.4.0
+  #flutter_ion: ^1.0.0
   google_fonts: ^2.1.0
-  like_button: ^2.0.3
+  #like_button: ^2.0.3
   bouncing_widget: ^2.0.0
   animated_text_kit: ^4.2.1
   url_launcher: ^6.0.17
   hovering: ^1.0.4
   animations: ^2.0.2
-  flutter_switch: ^0.3.2
-  toggle_switch: ^1.3.0
-  flutter_device_type: ^0.4.0
-  flutter_easyloading: ^3.0.3
+  #flutter_switch: ^0.3.2
+  #toggle_switch: ^1.3.0
+  #flutter_device_type: ^0.4.0
+  #flutter_easyloading: ^3.0.3
   stream_chat: ^3.3.1
-  text_style_editor: ^1.1.1
-  text_editor: ^0.7.0
-  quill_delta: ^3.0.0-nullsafety.2
-  flutter_keyboard_visibility: ^5.1.0
-  provider: ^6.0.2
+  #text_style_editor: ^1.1.1
+  #text_editor: ^0.7.0
+  #quill_delta: ^3.0.0-nullsafety.2
+  #flutter_keyboard_visibility: ^5.1.0
+  #provider: ^6.0.2
   number_paginator: ^0.0.2
   stream_chat_flutter_core: ^3.3.1
   avatars: ^3.0.2
-  motion_toast: ^2.1.1
-  simple_tooltip: ^1.0.0
+  motion_toast: ^2.1.6
+  #simple_tooltip: ^1.0.0
   desktop_webview_window: ^0.1.6
   flutter_session_manager: ^1.0.3
+  intl: ^0.17.0
 
 
 
