--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2
   sizer: ^2.0.15
   shared_preferences: ^2.0.0-nullsafety
   #dots_indicator: ^2.0.0
@@ -125,6 +125,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: NewIcons
+      fonts:
+        - asset: fonts/NewIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
