--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   keyboard_actions: ^3.4.4
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.0
-  flutter_typeahead: ^4.0.0
+#  flutter_typeahead: ^4.0.0
   #flutter_staggered_grid_view: ^0.4.1
   #desktop_window: ^0.4.0
   #flutter_ion: ^1.0.0
@@ -66,6 +66,7 @@ dependencies:
   flutter_session_manager: ^1.0.3
   intl: ^0.17.0
   badges: ^2.0.2
+  textfield_search: ^0.10.0
 
 
 
