--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   intl: ^0.17.0
   badges: ^2.0.2
   textfield_search: ^0.10.0
+  flutter_slidable: ^1.3.0
 
 
 
@@ -112,6 +113,7 @@ flutter:
     - Assets/testNet.PNG
     - Assets/CoverPhoto.jpg
     - Assets/crown.PNG
+    - Assets/ring1.png
 
   #   - images/a_dot_ham.jpeg
 
