--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   badges: ^2.0.2
   textfield_search: ^0.10.0
   flutter_slidable: ^1.3.0
+  loading_animation_widget: ^1.2.0+2
 
 
 
