--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   textfield_search: ^0.10.0
   flutter_slidable: ^1.3.0
   loading_animation_widget: ^1.2.0+2
+  imageview360: ^1.3.0
+  eeffects: ^0.0.3
+
 
 
 
@@ -115,6 +118,14 @@ flutter:
     - Assets/CoverPhoto.jpg
     - Assets/crown.PNG
     - Assets/ring1.png
+    - Assets/1.jpg
+    - Assets/2.jpg
+    - Assets/3.jpg
+    - Assets/4.jpg
+    - Assets/5.jpg
+    - Assets/6.jpg
+    - Assets/7.jpg
+    - Assets/8.jpg
 
   #   - images/a_dot_ham.jpeg
 
