--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,10 @@ dependencies:
   loading_animation_widget: ^1.2.0+2
   imageview360: ^1.3.0
   eeffects: ^0.0.3
+  #image_picker: ^0.8.5+3
+  file_picker: ^4.2.8
+  async: ^2.8.2
+  path: ^1.8.1
 
 
 
@@ -99,33 +103,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets/krowl_logo.png
-    - Assets/krowl_logo2.png
-    - Assets/krowl_logo.gif
-    - Assets/press_enter.png
-    - Assets/Register.png
-    - Assets/userImage1.jpeg
-    - Assets/userImage2.jpeg
-    - Assets/userImage3.jpeg
-    - Assets/userImage4.jpeg
-    - Assets/userImage5.jpeg
-    - Assets/userImage6.jpeg
-    - Assets/userImage7.jpeg
-    - Assets/userImage8.jpeg
-    - Assets/clara3.png
-    - Assets/clara4.PNG
-    - Assets/testNet.PNG
-    - Assets/CoverPhoto.jpg
-    - Assets/crown.PNG
-    - Assets/ring1.png
-    - Assets/1.jpg
-    - Assets/2.jpg
-    - Assets/3.jpg
-    - Assets/4.jpg
-    - Assets/5.jpg
-    - Assets/6.jpg
-    - Assets/7.jpg
-    - Assets/8.jpg
+    - Assets/
+
 
   #   - images/a_dot_ham.jpeg
 
