--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,6 +48,12 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    lintOptions {
+        disable 'InvalidPackage'
+        disable "Instantiatable"
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 flutter {
